methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:35: error: '(' expected but identifier found.
      for m(<- 1 to 7) {
          ^PictureMono2:38: error: illegal start of simple expression
    }
    ^